--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,9 +1,13 @@
 ---
 layout: default
 ---
-<h2>{{ page.title }}</h2>
-<p class="meta">{{ page.date | date_to_string }}</p>
+<article class="post">
+  <header>
+    <h1>{{ page.title }}</h1>
+    <time>{{ page.date | date_to_string }}</time>
+  </header>
 
-<div class="post">
-{{ content }}
-</div>
+  <section>
+    {{ content }}
+  </section>
+</article>
