--- a/css/main.scss
+++ b/css/main.scss
@@ -1,3 +1,6 @@
+@import 'fonts.scss';
+@import 'syntax.scss';
+
 /*****************************************************************************/
 /*
 /* Common
