--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,8 +4,22 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>{{ page.title }}</title>
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1">
+    <meta name="description" content="Blog of Georg Tavonius, a freelance Web Developer doing JavaScript, Ruby, HTML and CSS in Hamburg.">
+    <meta name="keywords" content="Blog, JavaScript, Node.js, Ruby, HTML, HTML5, CSS, CSS3, Freelancer, Freiberufler, projects, phantom.js, Canvas, WebSockets, SocketIO, Games">
 
+    <meta content="website" property="og:type">
+    <meta content="Jaz-Lounge Blog - by Georg Tavonius" property="og:title">
+    <meta content="http://blog.jaz-lounge.com" property="og:url">
+    <meta property="og:image" content="http://jaz-lounge.com/me.jpg">
+
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:site" content="@Georg_Tavonius">
+    <meta name="twitter:title" content="Blog of Georg Tavonius; Web Developer in Hamburg">
+    <meta name="twitter:description" content="I blog about the Web, JavaScript, Ruby, product development and the life. I live in Hamburg. I am for hire.">
+    <meta name="twitter:creator" content="@Georg_Tavonius">
+    <meta name="twitter:image:src" content="http://jaz-lounge.com/me.jpg">
+    <meta name="twitter:domain" content="blog.jaz-lounge.com">
 
     <link rel="stylesheet" href="/css/main.css">
   </head>
