Made _deploy the new _site (hopefully this makes gh-pages work)

--- a/css/main.scss
+++ b/css/main.scss
@@ -1,5 +1,5 @@
-@import 'fonts.scss';
-@import 'syntax.scss';
+@import './fonts.scss';
+@import './syntax.scss';
 
 /*****************************************************************************/
 /*
